# SO-Shell

./: CMakeLists.txt  Makefile  README.md  directoriesList.c  directoriesList.h  list.c  list.h  memory.c  memory.h  memoryList.c  memoryList.h  p0.c  p1.c  p2.c  p3.c  processes.c  processes.h  processesList.c  processesList.h  shell.out
